@@ -4,6 +4,8 @@ KOfficeCore:
 - Changed .desktop file setup so that changes to the K menu structure,
   to file-program associations, or other distribution customizations cannot
   prevent KOffice applications from starting.
+- Fixed parsing of number+unit, due to change in Qt 3.3. Fixes problems
+  when opening OOWriter documents in particular.
 
 KoText:
 - Date variables for printing-date, last-modified, and creation-date were
